--- a/roster.html
+++ b/roster.html
@@ -189,7 +189,7 @@
 <tr><td>TEN</td><td>Jeremy McNichols       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
-<tr><td>CLE</td><td>Odell Beckham          </td></tr>
+<tr><td>LAR</td><td>Odell Beckham          </td></tr>
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
 <tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td> TB</td><td>Antonio Brown          </td></tr>
