--- a/freeagt.html
+++ b/freeagt.html
@@ -1,25 +1,25 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 9)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 10)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3>1060</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>1015</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 885</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jared Goff             </td><td><font size=3> 740</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 355</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Geno Smith             </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Mike White             </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Josh Johnson           </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Colt McCoy             </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Trevor Siemian         </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3>1170</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>1045</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jameis Winston         </td><td><font size=3>1000</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 975</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 910</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Jared Goff             </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Mike White             </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Geno Smith             </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Trevor Siemian         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Josh Johnson           </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Colt McCoy             </td><td><font size=3> 135</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
@@ -27,35 +27,35 @@
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>JD McKissic            </td><td><font size=3> 260</td></tr>
 <tr><td><font size=3>Giovani Bernard        </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Godwin Igwebuike       </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Boston Scott           </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Ty'Son Williams        </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>Jordan Howard          </td><td><font size=3> 210</td></tr>
 <tr><td><font size=3>Travis Homer           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Boston Scott           </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Damien Williams        </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Eno Benjamin           </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Malcolm Brown          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Phillip Lindsay        </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Peyton Barber          </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Le'Veon Bell           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>JJ Taylor              </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Christian Kirk         </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 510</td></tr>
+<tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 745</td></tr>
+<tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Christian Kirk         </td><td><font size=3> 565</td></tr>
 <tr><td><font size=3>Tim Patrick            </td><td><font size=3> 505</td></tr>
+<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 480</td></tr>
 <tr><td><font size=3>AJ Green               </td><td><font size=3> 450</td></tr>
 <tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>Henry Ruggs            </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Van Jefferson          </td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>Van Jefferson          </td><td><font size=3> 425</td></tr>
+<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Deonte Harris          </td><td><font size=3> 410</td></tr>
 <tr><td><font size=3>Marvin Jones           </td><td><font size=3> 390</td></tr>
-<tr><td><font size=3>Deonte Harris          </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>Byron Pringle          </td><td><font size=3> 365</td></tr>
 <tr><td><font size=3>Darnell Mooney         </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 345</td></tr>
 <tr><td><font size=3>KJ Osborn              </td><td><font size=3> 340</td></tr>
 <tr><td><font size=3>Randall Cobb           </td><td><font size=3> 330</td></tr>
 </table>
@@ -64,16 +64,16 @@
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>CJ Uzomah              </td><td><font size=3> 565</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>David Njoku            </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Robert Tonyan          </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Donald Parham          </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Donald Parham          </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Dan Arnold             </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>10)</td><td><font size=3>Maxx Williams          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 130</td></tr>
 <tr><td><font size=3>13)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Geoff Swaim            </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 125</td></tr>
@@ -81,37 +81,37 @@
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 810</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 795</td></tr>
 <tr><td><font size=3>Graham Gano            </td><td><font size=3> 790</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 690</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 645</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 645</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 615</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 690</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 690</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 630</td></tr>
+<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 615</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 575</td></tr>
 <tr><td><font size=3>Cairo Santos           </td><td><font size=3> 465</td></tr>
 <tr><td><font size=3>Austin Seibert         </td><td><font size=3> 430</td></tr>
 <tr><td><font size=3>Rodrigo Blankenship    </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>Matthew Wright         </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Brian Johnson          </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Matthew Wright         </td><td><font size=3> 370</td></tr>
+<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>Brian Johnson          </td><td><font size=3> 255</td></tr>
 <tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 230</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Pat Freiermuth         </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Jermar Jefferson       </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Kene Nwangwu           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Tommy Tremble          </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Chris Evans            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Jermar Jefferson       </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Josh Palmer            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Brevin Jordan          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Noah Gray              </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Anthony Schwartz       </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Nico Collins           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Terrace Marshall       </td><td><font size=3>   5</td></tr>
 <tr><td><font size=3>Jose Borregales        </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Jake Funk              </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Terrace Marshall       </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Chris Naggar           </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Jake Verity            </td><td><font size=3>   0</td></tr>
 </table>
