--- a/pickups.html
+++ b/pickups.html
@@ -348,7 +348,9 @@ Team 8  - Greg Joseph/Miles Sanders (10/31)<br>
 Team 5  - Adrian Peterson/Robert Tonyan (11/2)<br>
 Team 6  - Jordan Love/Henry Ruggs (11/3)<br>
 Team 6  - Jordan Howard/Jameis Winston (11/10)<br>
-Team 6  - D'Onta Foreman/Michael Thomas (11/11)
+Team 6  - D'Onta Foreman/Michael Thomas (11/11)<br>
+Team 6  - Chase Claypool/Sam Darnold (11/14)<br>
+Team 5  - CJ Uzomah/Chase Edmonds (11/16)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
