--- a/roster.html
+++ b/roster.html
@@ -126,7 +126,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Antonio Gibson         </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
-<tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
 <tr><td>TEN</td><td>Adrian Peterson        </td></tr>
@@ -138,6 +137,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
+<tr><td>CIN</td><td>CJ Uzomah              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
@@ -151,7 +151,6 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (6)</b></font></td></tr>
 <tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td>BAL</td><td>Tyler Huntley          </td></tr>
-<tr><td>CAR</td><td>Sam Darnold            </td></tr>
 <tr><td> GB</td><td>Jordan Love            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
@@ -164,6 +163,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
+<tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>BUF</td><td>Tommy Sweeney          </td></tr>
