--- a/roster.html
+++ b/roster.html
@@ -76,8 +76,8 @@
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td>BUF</td><td>Emmanuel Sanders       </td></tr>
+<tr><td>ARI</td><td>Christian Kirk         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
