--- a/roster.html
+++ b/roster.html
@@ -95,6 +95,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (4)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
+<tr><td>CAR</td><td>Cam Newton             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
@@ -104,7 +105,6 @@
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
-<tr><td>CAR</td><td>Robby Anderson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
 <tr><td>ARI</td><td>Zach Ertz              </td></tr>
