--- a/thousand.html
+++ b/thousand.html
@@ -105,6 +105,12 @@
     <td>1300</td>
     <td>Mike</td>
     <td>560</td></tr>
+<tr><td>2021</td>
+    <td>Week 11</td>
+    <td>Sam Edwards</td>
+    <td>1300</td>
+    <td>States</td>
+    <td>150</td></tr>
 <tr><td>2004</td>
     <td>Week 7</td>
     <td>Randy Edwards</td>
@@ -657,6 +663,12 @@
     <td>1065</td>
     <td>Rich</td>
     <td>575</td></tr>
+<tr><td>2021</td>
+    <td>Week 11</td>
+    <td>John Heinzelmann</td>
+    <td>1065</td>
+    <td>Randy</td>
+    <td>410</td></tr>
 <tr><td>2002</td>
     <td>Week 7</td>
     <td>Roger Bakos</td>
