--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <a href="week8.html"><b>8</b></a>
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
-<a href="week11.html"><b>11P</b></a><br>
+<a href="week11.html"><b>11</b></a>
+<a href="week12.html"><b>12P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -69,42 +70,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6755</font></td>
-    <td><font size=2>5800</font></td>
-    <td><font size=2>1045</font></td>
+    <td><font size=2>8055</font></td>
+    <td><font size=2>5950</font></td>
+    <td><font size=2>1300</font></td>
     <td><font size=2>425</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6340</font></td>
-    <td><font size=2>5600</font></td>
+    <td><font size=2>7185</font></td>
+    <td><font size=2>5975</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6940</font></td>
-    <td><font size=2>6465</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7410</font></td>
+    <td><font size=2>7200</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5310</font></td>
-    <td><font size=2>7115</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>5900</font></td>
+    <td><font size=2>7895</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>5840</font></td>
-    <td><font size=2>6995</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>6215</font></td>
+    <td><font size=2>7840</font></td>
     <td><font size=2>910</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
@@ -117,42 +118,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5775</font></td>
-    <td><font size=2>5485</font></td>
-    <td><font size=2>765</font></td>
+    <td><font size=2>6840</font></td>
+    <td><font size=2>5895</font></td>
+    <td><font size=2>1065</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6950</font></td>
-    <td><font size=2>6165</font></td>
+    <td><font size=2>7730</font></td>
+    <td><font size=2>6755</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>430</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6850</font></td>
-    <td><font size=2>6330</font></td>
+    <td><font size=2>7585</font></td>
+    <td><font size=2>6800</font></td>
     <td><font size=2>865</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5305</font></td>
-    <td><font size=2>5605</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5455</font></td>
+    <td><font size=2>6905</font></td>
     <td><font size=2>795</font></td>
-    <td><font size=2>205</font></td>
+    <td><font size=2>150</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6180</font></td>
-    <td><font size=2>6685</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6590</font></td>
+    <td><font size=2>7750</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>2</font></td>
