--- a/roster.html
+++ b/roster.html
@@ -152,9 +152,9 @@
 <tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td>BAL</td><td>Tyler Huntley          </td></tr>
 <tr><td> GB</td><td>Jordan Love            </td></tr>
+<tr><td>HOU</td><td>Tyrod Taylor           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
-<tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>ATL</td><td>Mike Davis             </td></tr>
 <tr><td>LAR</td><td>Sony Michel            </td></tr>
 <tr><td>SEA</td><td>Alex Collins           </td></tr>
@@ -219,13 +219,13 @@
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>NYJ</td><td>Corey Davis            </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
+<tr><td>CHI</td><td>Darnell Mooney         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>DEN</td><td>Noah Fant              </td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
-<tr><td>MIN</td><td>Greg Joseph            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
 <tr><td>NYG</td><td>Kadarius Toney         </td></tr>
