--- a/pickups.html
+++ b/pickups.html
@@ -215,8 +215,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Darnell Mooney/Greg Joseph</td>
+<td width=50>11/23</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -350,7 +350,8 @@ Team 6  - Jordan Love/Henry Ruggs (11/3)<br>
 Team 6  - Jordan Howard/Jameis Winston (11/10)<br>
 Team 6  - D'Onta Foreman/Michael Thomas (11/11)<br>
 Team 6  - Chase Claypool/Sam Darnold (11/14)<br>
-Team 5  - CJ Uzomah/Chase Edmonds (11/16)
+Team 5  - CJ Uzomah/Chase Edmonds (11/16)<br>
+Team 6  - Tyrod Taylor/Chris Carson (11/23)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
