--- a/pickups.html
+++ b/pickups.html
@@ -315,8 +315,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Miles Sanders/Samaje Perine</td>
+<td width=50>11/24</td>
 </tr></table></td>
 </tr>
 </table>
