--- a/pickups.html
+++ b/pickups.html
@@ -139,8 +139,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Traded to Matthew</td>
+<td width=50>11/24</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -372,5 +372,10 @@ Team 8 - Darren Waller, Michael Carter
 <td width=600>
 Team 6 - Jameis Winston<br>
 Team 9 - Matt Ryan
+</td></tr>
+<tr><td width=50>11/24</td>
+<td width=600>
+Team 1 - pickup (Joey Slye 11/24)<br>
+Team 6 - Kenyan Drake (cut Jordan Love)
 </td></tr>
 </table>
