--- a/roster.html
+++ b/roster.html
@@ -13,7 +13,6 @@
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>DET</td><td>D'Andre Swift          </td></tr>
 <tr><td>DET</td><td>Jamaal Williams        </td></tr>
-<tr><td> LV</td><td>Kenyan Drake           </td></tr>
 <tr><td>BAL</td><td>Latavius Murray        </td></tr>
 <tr><td>BAL</td><td>Devonta Freeman        </td></tr>
 <tr><td>HOU</td><td>David Johnson          </td></tr>
@@ -26,6 +25,7 @@
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Matt Prater            </td></tr>
+<tr><td>WAS</td><td>Joey Slye              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Mac Jones              </td></tr>
 <tr><td>HOU</td><td>Davis Mills            </td></tr>
@@ -151,7 +151,6 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (6)</b></font></td></tr>
 <tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td>BAL</td><td>Tyler Huntley          </td></tr>
-<tr><td> GB</td><td>Jordan Love            </td></tr>
 <tr><td>HOU</td><td>Tyrod Taylor           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
@@ -160,6 +159,7 @@
 <tr><td>SEA</td><td>Alex Collins           </td></tr>
 <tr><td>PHI</td><td>Jordan Howard          </td></tr>
 <tr><td>TEN</td><td>D'Onta Foreman         </td></tr>
+<tr><td> LV</td><td>Kenyan Drake           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
