--- a/roster.html
+++ b/roster.html
@@ -94,13 +94,13 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (4)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
-<tr><td>NYG</td><td>Daniel Jones           </td></tr>
 <tr><td>CAR</td><td>Cam Newton             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td>ARI</td><td>James Conner           </td></tr>
 <tr><td> KC</td><td>Darrel Williams        </td></tr>
+<tr><td>NYJ</td><td>Ty Johnson             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
