--- a/pickups.html
+++ b/pickups.html
@@ -123,8 +123,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ty Johnson/Daniel Jones</td>
+<td width=50>11/25</td>
 </tr></table></td>
 </tr>
 <tr>
