--- a/pickups.html
+++ b/pickups.html
@@ -298,8 +298,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Brandon Aiyuk/Larry Rountree</td>
+<td width=50>11/30</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -351,7 +351,8 @@ Team 6  - Jordan Howard/Jameis Winston (11/10)<br>
 Team 6  - D'Onta Foreman/Michael Thomas (11/11)<br>
 Team 6  - Chase Claypool/Sam Darnold (11/14)<br>
 Team 5  - CJ Uzomah/Chase Edmonds (11/16)<br>
-Team 6  - Tyrod Taylor/Chris Carson (11/23)
+Team 6  - Tyrod Taylor/Chris Carson (11/23)<br>
+Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
