--- a/roster.html
+++ b/roster.html
@@ -10,7 +10,6 @@
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>DET</td><td>D'Andre Swift          </td></tr>
 <tr><td>DET</td><td>Jamaal Williams        </td></tr>
 <tr><td>BAL</td><td>Latavius Murray        </td></tr>
@@ -21,6 +20,7 @@
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
+<tr><td> NE</td><td>Kendrick Bourne        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -248,6 +248,7 @@
 <tr><td>TEN</td><td>Julio Jones            </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>HOU</td><td>Brandin Cooks          </td></tr>
+<tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
@@ -256,7 +257,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Trey Lance             </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
-<tr><td>LAC</td><td>Larry Rountree         </td></tr>
 <tr><td>NYJ</td><td>Matt Ammendola         </td></tr>
 </table>
 </td>
