--- a/roster.html
+++ b/roster.html
@@ -168,7 +168,7 @@
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>BUF</td><td>Tommy Sweeney          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>TEN</td><td>Randy Bullock          </td></tr>
+<tr><td>MIN</td><td>Greg Joseph            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
 <tr><td>CLE</td><td>Demetric Felton        </td></tr>
