--- a/week13.html
+++ b/week13.html
@@ -23,7 +23,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
@@ -36,10 +36,10 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Roethlisberger</td><td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
@@ -67,7 +67,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
@@ -146,7 +146,7 @@
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Ammendola</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
