--- a/pickups.html
+++ b/pickups.html
@@ -352,7 +352,8 @@ Team 6  - D'Onta Foreman/Michael Thomas (11/11)<br>
 Team 6  - Chase Claypool/Sam Darnold (11/14)<br>
 Team 5  - CJ Uzomah/Chase Edmonds (11/16)<br>
 Team 6  - Tyrod Taylor/Chris Carson (11/23)<br>
-Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)
+Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)<br>
+Team 1  - Dontrell Hilliard/Joey Slye (12/7)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
