--- a/roster.html
+++ b/roster.html
@@ -15,6 +15,7 @@
 <tr><td>BAL</td><td>Latavius Murray        </td></tr>
 <tr><td>BAL</td><td>Devonta Freeman        </td></tr>
 <tr><td>HOU</td><td>David Johnson          </td></tr>
+<tr><td>TEN</td><td>Dontrell Hilliard      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
@@ -25,7 +26,6 @@
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Matt Prater            </td></tr>
-<tr><td>WAS</td><td>Joey Slye              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Mac Jones              </td></tr>
 <tr><td>HOU</td><td>Davis Mills            </td></tr>
