--- a/roster.html
+++ b/roster.html
@@ -74,16 +74,16 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
-<tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td>BUF</td><td>Emmanuel Sanders       </td></tr>
 <tr><td>ARI</td><td>Christian Kirk         </td></tr>
+<tr><td> LV</td><td>Hunter Renfrow         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
+<tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td> NE</td><td>Nick Folk              </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> NE</td><td>Quinn Nordin           </td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>PHI</td><td>Kenneth Gainwell       </td></tr>
 </table>
