--- a/pickups.html
+++ b/pickups.html
@@ -118,8 +118,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Hunter Renfrow/Courtland Sutton</td>
+<td width=50>12/9</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -353,7 +353,8 @@ Team 6  - Chase Claypool/Sam Darnold (11/14)<br>
 Team 5  - CJ Uzomah/Chase Edmonds (11/16)<br>
 Team 6  - Tyrod Taylor/Chris Carson (11/23)<br>
 Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)<br>
-Team 1  - Dontrell Hilliard/Joey Slye (12/7)
+Team 1  - Dontrell Hilliard/Joey Slye (12/7)<br>
+Team 3  - Dalton Schultz/Quinn Nordin (12/9)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
