--- a/roster.html
+++ b/roster.html
@@ -214,10 +214,10 @@
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
+<tr><td> SF</td><td>Jeff Wilson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
-<tr><td>NYJ</td><td>Corey Davis            </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td>CHI</td><td>Darnell Mooney         </td></tr>
 <tr><td height=9></td><td></td></tr>
