--- a/pickups.html
+++ b/pickups.html
@@ -354,7 +354,8 @@ Team 5  - CJ Uzomah/Chase Edmonds (11/16)<br>
 Team 6  - Tyrod Taylor/Chris Carson (11/23)<br>
 Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)<br>
 Team 1  - Dontrell Hilliard/Joey Slye (12/7)<br>
-Team 3  - Dalton Schultz/Quinn Nordin (12/9)
+Team 3  - Dalton Schultz/Quinn Nordin (12/9)<br>
+Team 8  - Jeff Wilson/Corey Davis (12/12)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
